<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddContactActivity">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_16"
        android:layout_marginStart="@dimen/dm_16"
        android:src="@drawable/ic_back_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/dm_16" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_16"
        android:padding="@dimen/dm_8"
        android:text="@string/edit_profile"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:textSize="@dimen/tv_heading"
        android:textColor="@color/colorsix"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        android:layout_marginLeft="@dimen/dm_16" />

    <ScrollView
        android:layout_width="@dimen/dm_0"
        android:layout_height="@dimen/dm_0"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_16"
            android:layout_marginEnd="@dimen/dm_16">

            <ImageView
                android:id="@+id/iv_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_16"
                android:src="@drawable/colored_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle"
                app:layout_constraintEnd_toEndOf="@id/iv_circle"
                app:layout_constraintStart_toStartOf="@id/iv_circle"
                app:layout_constraintTop_toTopOf="@id/iv_circle" />
            <ImageView
                android:id="@+id/iv_circle_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/colored_circle_small"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle"
                app:layout_constraintEnd_toEndOf="@id/iv_circle" />
            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dm_4"
                android:src="@drawable/ic_edit_pen"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_small"
                app:layout_constraintEnd_toEndOf="@id/iv_circle_small" />


            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_edit"
                android:layout_marginLeft="@dimen/dm_16"
                tools:ignore="UnknownId" />
            <com.xw.repo.XEditText
                android:id="@+id/et_first_name"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_marginTop="@dimen/dm_8"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:ems="10"
                app:backgroundTint="@color/colorsix"
                android:textSize="@dimen/tv_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name"
                app:x_disableEmoji="true"
                android:layout_marginLeft="@dimen/dm_16" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:text="@string/last_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_first_name"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_edit"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="8dp" />

            <com.xw.repo.XEditText
                android:id="@+id/et_last_name"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_8"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:ems="10"
                app:backgroundTint="@color/colorsix"
                android:textSize="@dimen/tv_16"
                app:layout_constraintStart_toEndOf="@+id/et_first_name"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name"
                app:x_disableEmoji="true"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_16"
                android:layout_marginEnd="@dimen/dm_16"
                android:text="@string/gender"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_first_name" />
            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dm_16"
                android:entries="@array/gender"
                android:padding="@dimen/dm_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender"
                android:layout_marginRight="@dimen/dm_16" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_16"
                android:layout_marginEnd="@dimen/dm_16"
                android:text="@string/dob"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                android:fontFamily="@font/sourcesanspro_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_gender" />
            <com.xw.repo.XEditText
                android:id="@+id/et_date"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_8"
                android:layout_marginEnd="@dimen/dm_16"
                android:ems="10"
                android:textCursorDrawable="@drawable/cursor_color"
                app:backgroundTint="@color/colorsix"
                android:longClickable="false"
                android:textSize="@dimen/tv_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:x_disableEmoji="true" />
            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_16"
                android:layout_marginEnd="@dimen/dm_16"
                android:text="@string/mobile_no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                android:fontFamily="@font/sourcesanspro_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_date" />

            <com.xw.repo.XEditText
                android:id="@+id/et_mobile"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_16"
                android:layout_marginEnd="@dimen/dm_16"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="phone"
                android:textCursorDrawable="@drawable/cursor_color"
                android:maxLength="13"
                app:backgroundTint="@color/colorsix"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mobile" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_16"
                android:layout_marginEnd="@dimen/dm_16"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_mobile" />
            <com.xw.repo.XEditText
                android:id="@+id/et_email"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_16"
                android:layout_marginTop="@dimen/dm_8"
                android:layout_marginEnd="@dimen/dm_16"
                android:ems="10"
                app:backgroundTint="@color/colorsix"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/tv_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:x_disableEmoji="true" />
            <Button
                android:id="@+id/btn_save"
                android:layout_width="@dimen/dm_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dm_44"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/dm_44"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_primary"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>